kube/deploy/services/syncthing/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &n syncthing-http
  namespace: syncthing
spec:
  routes:
    - match: Host(`sync.${EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: *n
          port: 8384
      middlewares:
        - name: compress
          namespace: ingress
        - name: authelia-authz
          namespace: authelia
  tls:
    secretName: tls-cert-sync.${EXTERNAL_DOMAIN}
    domains:
      - main: sync.${EXTERNAL_DOMAIN}
